c2prj1_cards/grade.txt
Grading at Tue Jan 29 18:41:20 UTC 2019
Compiling cards.c
cards.c: In function ‘ranking_to_string’:
cards.c:23:19: error: return makes pointer from integer without a cast [-Werror=int-conversion]
   default: return '?'; break;
                   ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
